--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-        <title>Diary</title>
+        <title>My Personal Diary</title>
         <style>
             html, body {
                 margin: 0;
@@ -22,7 +22,7 @@
 			}
 
             .head {
-                background-color: #DCD0EA;
+                background-color: white;
             }
 
             .head-content {
@@ -31,14 +31,14 @@
 
             .head-text {
                 font-family: cursive;
-                color: white;
-                font-size: 30px;
-                text-align: center; 
+                color: #7D3C98;
+                font-size: 36px;
+                text-align: left; 
                 padding: 15px;
             }
 
             .banner-content {
-                height: 400px;
+                height: 500px;
                 overflow: hidden;
             }
 
@@ -69,7 +69,7 @@
 				position: absolute;
                 top: 50%;
                 left: 50%;
-				transform: translate(-50%, -450%);
+				transform: translate(-50%, -350%);
 				color: white;
                 font-size: 42px;
 			}
@@ -79,21 +79,20 @@
             }
 
             .banner-login {
-                transform: translate(-150%, -200%);
+                transform: translate(-150%, -100%);
             }
 
             .banner-signup {
-                transform: translate(50%, -200%);
+                transform: translate(50%, -100%);
             }
 
 			.about-container {
-				padding: 100px;
+				padding: 150px;
 			}
 
 			.about-text {
 				width: 50%;
 				margin: auto;
-				line-height: 2;
 			}
 
 			.about-text h1 {
@@ -102,59 +101,90 @@
 				color: #7D3C98;
 			}
 
+			.about-text h2 {
+				background-color: #F6D7E8;
+				color: #F6D7E8;
+				width: 400px;
+				height: 7px;
+				font-size: 3px;
+				text-align: center;
+				margin: auto;
+			}
+
 			.about-text p {
 				font-size: 24px;
 				color: #7D3C98;
 				text-align: justify;
+				line-height: 2;
 			}
 
 			.about-features {
 				display: flex;
 				flex-wrap: wrap;
 				justify-content: space-evenly;
-				padding: 50px;
+				padding: 100px;
 			}
 
 			.about-single-feat {
 				order: 3;
 				padding: 40px;
 				border-radius: 5px;
-				background-color: #F2BFD7;
+				background-color: #AA336A;
 				color: white;
 				font-size: 24px;
 			}
 
-			.footer, .nav {
-				padding: 2px;
-			}
-
-			.nav a:hover {
-				color: #F2BFD7;
+			.about-single-feat:hover {
+				-webkit-transform: scale(1.2);
+				-ms-transform: scale(1.2);
+				transform: scale(1.2);
+				transition: 1s ease;
 			}
 
 			.nav {
 				background-color: #7D3C98;
+				position: sticky;
+				top: 0px;
+				margin: 0px;
+				overflow: hidden;
 			}
 
 			.footer {
 				background-color: #DCD0EA;
+				overflow: hidden;
 			}
-
-			.footer li, .nav li {
-				display: inline;
-			}
-
-			.footer a, .nav a {
-				padding-right: 30px;
-				text-decoration: none;
-			}
-
+			
 			.footer a {
 				color: #7D3C98;
 			}
 
 			.nav a {
-				color: white;
+				color: #f2f2f2;
+			}
+
+			.nav a, .footer a {
+				text-decoration: none;
+				text-transform: uppercase;
+				overflow: hidden;
+				font: "Arial";
+				text-decoration: none;
+				font-size: 18px;
+				letter-spacing: 1px;
+				box-sizing: border-box;
+				float: left;
+				display: inline-block;
+				text-align: center;
+				padding: 16px 24px;
+			}
+
+			.nav a:hover {
+				background-color: #F2BFD7;
+				color: #7D3C98;
+			}
+
+			.footer a:hover {
+				background-color: #AA336A;
+				color: #F6EDEE;
 			}
         </style>
     </head>
@@ -166,14 +196,12 @@
                 </div>
             </div>
         </div>
-		<div class="nav">
-			<ul>
-				<li><a href="https://jacquelinee.sgedu.site/final_project/index.html">Home</a></li>
-				<li><a href="https://jacquelinee.sgedu.site/final_project/contactus.html">Contact Us</a></li>
-				<li><a href="https://jacquelinee.sgedu.site/final_project/diaryform.html">Diary</a>
-				<li style="float: right"><a href="https://jacquelinee.sgedu.site/final_project/signup.html">Signup</a></li>
-				<li style="float: right"><a href="https://jacquelinee.sgedu.site/final_project/login.html">Login</a></li>
-			</ul>
+		<div class="nav" id="nav">
+			<a href="https://jacquelinee.sgedu.site/final_project/index.html">Home</a>
+			<a href="https://jacquelinee.sgedu.site/final_project/contactus.html">Contact Us</a>
+			<a href="https://jacquelinee.sgedu.site/final_project/diaryform.html">Diary</a>
+			<a href="https://jacquelinee.sgedu.site/final_project/signup.html" style="float: right">Signup</a>
+			<a href="https://jacquelinee.sgedu.site/final_project/login.html" style="float: right">Login</a>
 		</div>
         <div class="banner">
             <div class="banner-content">
@@ -193,6 +221,7 @@
 			<div class="about-content">
 				<div class="about-text">
 					<h1>Features</h1>
+					<h2>placeholder</h2>
 					<p>
 						Our website provides a unique daily cataloguing experience. The days of losing precious information 
 						in lost or damaged notebooks are over. Now, My Diary provides a secure place to store all your 
@@ -217,12 +246,10 @@
 			</div>
 		</div>
 		<div class="footer">
-			<ul>
-				<li><a href="https://jacquelinee.sgedu.site/final_project/index.html">Home</a></li>
-				<li><a href="https://jacquelinee.sgedu.site/final_project/contactus.html">Contact Us</a></li>
-				<li><a href="https://jacquelinee.sgedu.site/final_project/signup.html">Signup</a></li>
-				<li><a href="https://jacquelinee.sgedu.site/final_project/login.html">Login</a></li>
-			</ul>
+			<a href="https://jacquelinee.sgedu.site/final_project/index.html">Home</a>
+			<a href="https://jacquelinee.sgedu.site/final_project/contactus.html">Contact Us</a>
+			<a href="https://jacquelinee.sgedu.site/final_project/signup.html">Signup</a>
+			<a href="https://jacquelinee.sgedu.site/final_project/login.html">Login</a>
 		</div>
     </body>
 </html>
