--- a/contactus.html
+++ b/contactus.html
@@ -3,63 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>My Diary</title>
-		<link href="styles.css" rel="stylesheet">
-		<style>
-			html, body {
-				margin: 0;
-				padding: 0;
-				font-family: sans-serif;
-			}
-
-			.head {
-                background-color: #DCD0EA;
-            }
-
-            .head-content {
-                padding: 16px;
-            }
-
-            .head-text {
-                font-family: sans-serif;
-                color: white;
-                font-size: 30px;
-                text-align: center; 
-                padding: 20px;
-            }
-			
-			.footer, .nav {
-				padding: 2px;
-			}
-
-			.nav a:hover {
-				color: #F2BFD7;
-			}
-
-			.nav {
-				background-color: #7D3C98;
-			}
-
-			.footer {
-				background-color: #DCD0EA;
-			}
-
-			.footer li, .nav li {
-				display: inline;
-			}
-
-			.footer a, .nav a {
-				padding-right: 30px;
-				text-decoration: none;
-			}
-
-			.footer a {
-				color: #7D3C98;
-			}
-
-			.nav a {
-				color: white;
-			}
-		</style>
+		<link href="style.css" rel="stylesheet">
+		<link href="form_style.css" rel="stylesheet">
 	</head>
 	<body>
 		<div class="head">
@@ -69,22 +14,57 @@
                 </div>
             </div>
         </div>
-		<div class="nav">
-			<ul>
-				<li><a href="https://jacquelinee.sgedu.site/final_project/index.html">Home</a></li>
-				<li><a href="https://jacquelinee.sgedu.site/final_project/contactus.html">Contact Us</a></li>
-				<li><a href="https://jacquelinee.sgedu.site/final_project/diaryform.html">Diary</a>
-				<li style="float: right"><a href="https://jacquelinee.sgedu.site/final_project/signup.html">Signup</a></li>
-				<li style="float: right"><a href="https://jacquelinee.sgedu.site/final_project/login.html">Login</a></li>
-			</ul>
+		<div class="nav" id="nav">
+			<a href="https://jacquelinee.sgedu.site/final_project/index.html">Home</a>
+			<a href="https://jacquelinee.sgedu.site/final_project/contactus.html">Contact Us</a>
+			<a href="https://jacquelinee.sgedu.site/final_project/signup.html" style="float: right">Signup</a>
+			<a href="https://jacquelinee.sgedu.site/final_project/login.php" style="float: right">Login</a>
+		</div>
+		<div class="form">
+			<h1>Contact Us</h1>
+			<form>
+				<label for="name">Name</label>
+				<input type="text" id="name" name="name" />
+
+				<label for="message">Message</label>
+				<textarea id="message" name="message"></textarea>
+
+				<label for="priority">Priority</label>
+				<select id="priority">
+					<option value="1">Low</option>
+					<option value="2" selected>Medium</option>
+					<option value="3">High</option>
+				</select>
+				<fieldset>
+					<legend>Type</legend>
+					<div style="text-align: center">
+						<label>
+							<input type="radio" name="type" value="1">
+							Question
+						</label>
+
+						<label>
+							<input type="radio" name="type" value="2">
+							Comment
+						</label>
+
+						<label>
+							<input type="radio" name="type" value="3">
+							Suggestion
+						</label>
+					</div>
+				</fieldset>
+				<br />
+				<div style="text-align: center;">
+					<input type="submit" value="Record Entry">
+				</div>
+			</form>
 		</div>
 		<div class="footer">
-			<ul>
-				<li><a href="https://jacquelinee.sgedu.site/final_project/index.html">Home</a></li>
-				<li><a href="https://jacquelinee.sgedu.site/final_project/contactus.html">Contact Us</a></li>
-				<li><a href="https://jacquelinee.sgedu.site/final_project/signup.html">Signup</a></li>
-				<li><a href="https://jacquelinee.sgedu.site/final_project/login.html">Login</a></li>
-			</ul>
+			<a href="https://jacquelinee.sgedu.site/final_project/index.html">Home</a>
+			<a href="https://jacquelinee.sgedu.site/final_project/contactus.html">Contact Us</a>
+			<a href="https://jacquelinee.sgedu.site/final_project/signup.html">Signup</a>
+			<a href="https://jacquelinee.sgedu.site/final_project/login.php">Login</a>
 		</div>
 	</body>
 </html>
