--- a/index.html
+++ b/index.html
@@ -1,192 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
         <title>My Personal Diary</title>
-        <style>
-            html, body {
-                margin: 0;
-                padding: 0;
-				font-family: sans-serif;
-            }
-
-			@keyframes fadeInAnimation {
-				0% {
-					opacity: 0;
-				}
-				100% {
-					opacity: 0.5;
-				}
-			}
-
-            .head {
-                background-color: white;
-            }
-
-            .head-content {
-                padding: 16px;
-            }
-
-            .head-text {
-                font-family: cursive;
-                color: #7D3C98;
-                font-size: 36px;
-                text-align: left; 
-                padding: 15px;
-            }
-
-            .banner-content {
-                height: 500px;
-                overflow: hidden;
-            }
-
-            .banner-img img {
-                width: 100%;
-                height: auto;
-                object-fit: cover;
-                opacity: 0.5;
-				animation: fadeInAnimation ease 3s;
-				animation-iteration-count: 1;
-				animation-fill-mode: forwards;
-            }
-
-            .banner-content button {
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                background-color: #7D3C98;
-                color: white;
-                font-size: 24px;
-                padding: 12px 24px;
-                border: none;
-                cursor: pointer;
-                border-radius: 5px;
-            }
-			
-			.banner-content h1 {
-				position: absolute;
-                top: 50%;
-                left: 50%;
-				transform: translate(-50%, -350%);
-				color: white;
-                font-size: 42px;
-			}
-
-            .banner-content button:hover {
-                background-color: #DCD0EA;
-            }
-
-            .banner-login {
-                transform: translate(-150%, -100%);
-            }
-
-            .banner-signup {
-                transform: translate(50%, -100%);
-            }
-
-			.about-container {
-				padding: 150px;
-			}
-
-			.about-text {
-				width: 50%;
-				margin: auto;
-			}
-
-			.about-text h1 {
-				text-align: center;
-				font-size: 36px;
-				color: #7D3C98;
-			}
-
-			.about-text h2 {
-				background-color: #F6D7E8;
-				color: #F6D7E8;
-				width: 400px;
-				height: 7px;
-				font-size: 3px;
-				text-align: center;
-				margin: auto;
-			}
-
-			.about-text p {
-				font-size: 24px;
-				color: #7D3C98;
-				text-align: justify;
-				line-height: 2;
-			}
-
-			.about-features {
-				display: flex;
-				flex-wrap: wrap;
-				justify-content: space-evenly;
-				padding: 100px;
-			}
-
-			.about-single-feat {
-				order: 3;
-				padding: 40px;
-				border-radius: 5px;
-				background-color: #AA336A;
-				color: white;
-				font-size: 24px;
-			}
-
-			.about-single-feat:hover {
-				-webkit-transform: scale(1.2);
-				-ms-transform: scale(1.2);
-				transform: scale(1.2);
-				transition: 1s ease;
-			}
-
-			.nav {
-				background-color: #7D3C98;
-				position: sticky;
-				top: 0px;
-				margin: 0px;
-				overflow: hidden;
-			}
-
-			.footer {
-				background-color: #DCD0EA;
-				overflow: hidden;
-			}
-			
-			.footer a {
-				color: #7D3C98;
-			}
-
-			.nav a {
-				color: #f2f2f2;
-			}
-
-			.nav a, .footer a {
-				text-decoration: none;
-				text-transform: uppercase;
-				overflow: hidden;
-				font: "Arial";
-				text-decoration: none;
-				font-size: 18px;
-				letter-spacing: 1px;
-				box-sizing: border-box;
-				float: left;
-				display: inline-block;
-				text-align: center;
-				padding: 16px 24px;
-			}
-
-			.nav a:hover {
-				background-color: #F2BFD7;
-				color: #7D3C98;
-			}
-
-			.footer a:hover {
-				background-color: #AA336A;
-				color: #F6EDEE;
-			}
-        </style>
     </head>
     <body>
         <div class="head">
@@ -199,16 +17,15 @@
 		<div class="nav" id="nav">
 			<a href="https://jacquelinee.sgedu.site/final_project/index.html">Home</a>
 			<a href="https://jacquelinee.sgedu.site/final_project/contactus.html">Contact Us</a>
-			<a href="https://jacquelinee.sgedu.site/final_project/diaryform.html">Diary</a>
 			<a href="https://jacquelinee.sgedu.site/final_project/signup.html" style="float: right">Signup</a>
-			<a href="https://jacquelinee.sgedu.site/final_project/login.html" style="float: right">Login</a>
+			<a href="https://jacquelinee.sgedu.site/final_project/login.php" style="float: right">Login</a>
 		</div>
         <div class="banner">
             <div class="banner-content">
                 <div class="banner-img">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/d/d6/Timeless_Books.jpg">
 					<h1>Create Your Online Diary Today!</h1>
-                    <button class="banner-login" onclick="location.href = 'https://jacquelinee.sgedu.site/final_project/login.html';" type="button">
+                    <button class="banner-login" onclick="location.href = 'https://jacquelinee.sgedu.site/final_project/login.php';" type="button">
                         Log In
                     </button>
                     <button class="banner-signup" onclick="location.href = 'https://jacquelinee.sgedu.site/final_project/signup.html';" type="button">
@@ -249,7 +66,7 @@
 			<a href="https://jacquelinee.sgedu.site/final_project/index.html">Home</a>
 			<a href="https://jacquelinee.sgedu.site/final_project/contactus.html">Contact Us</a>
 			<a href="https://jacquelinee.sgedu.site/final_project/signup.html">Signup</a>
-			<a href="https://jacquelinee.sgedu.site/final_project/login.html">Login</a>
+			<a href="https://jacquelinee.sgedu.site/final_project/login.php">Login</a>
 		</div>
     </body>
 </html>
