--- a/signup-success.html
+++ b/signup-success.html
@@ -1,75 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="style.css">
         <style>
-            html, body {
-				margin: 0;
-				padding: 0;
-				font-family: sans-serif;
-			}
-
-			.head {
-				background-color: #DCD0EA;
-			}
-
-			.head-content {
-				padding: 16px;
-			}
-
-			.head-text {
-				font-family: sans-serif;
-				color: white;
-				font-size: 30px;
-				text-align: center; 
-				padding: 20px;
-			}
-
-			.form {
-				width: 50%;
-				margin: auto;
-				padding: 100px;
-			}
-
-			.form-text {
-				font-family: sans-serif;
-				color: #7D3C98;
-				font-size: 30px;
-				text-align: center; 
-				padding: 20px;
-			}
-
-			.footer, .nav {
-				padding: 2px;
-			}
-
-			.nav a:hover {
-				color: #F2BFD7;
-			}
-
-			.nav {
-				background-color: #7D3C98;
-			}
-
-			.footer {
-				background-color: #DCD0EA;
-			}
-
-			.footer li, .nav li {
-				display: inline;
-			}
-
-			.footer a, .nav a {
-				padding-right: 30px;
-				text-decoration: none;
-			}
-
-			.footer a {
-				color: #7D3C98;
-			}
-
-			.nav a {
-				color: white;
-			}
+            p {
+                padding: 600px;
+                text-align: center;
+                color: #7D3C98;
+            }
         </style>
     </head>
     <body>
@@ -80,23 +18,17 @@
 				</div>
 			</div>
 		</div>
-		<div class="nav">
-			<ul>
-				<li><a href="https://jacquelinee.sgedu.site/final_project/index.html">Home</a></li>
-				<li><a href="https://jacquelinee.sgedu.site/final_project/contactus.html">Contact Us</a></li>
-				<li><a href="https://jacquelinee.sgedu.site/final_project/diaryform.html">Diary</a>
-				<li style="float: right"><a href="https://jacquelinee.sgedu.site/final_project/signup.html">Signup</a></li>
-				<li style="float: right"><a href="https://jacquelinee.sgedu.site/final_project/login.html">Login</a></li>
-			</ul>
+		<div class="nav" id="nav">
+			<a href="https://jacquelinee.sgedu.site/final_project/index.html">Home</a>
+			<a href="https://jacquelinee.sgedu.site/final_project/contactus.html">Contact Us</a>
+			<a href="https://jacquelinee.sgedu.site/final_project/login.php" style="float: right">Login</a>
 		</div>
-        Signup Successful.
+        <p>Signup Successful.</p>
         <div class="footer">
-			<ul>
-				<li><a href="https://jacquelinee.sgedu.site/final_project/index.html">Home</a></li>
-				<li><a href="https://jacquelinee.sgedu.site/final_project/contactus.html">Contact Us</a></li>
-				<li><a href="https://jacquelinee.sgedu.site/final_project/signup.html">Signup</a></li>
-				<li><a href="https://jacquelinee.sgedu.site/final_project/login.html">Login</a></li>
-			</ul>
+			<a href="https://jacquelinee.sgedu.site/final_project/index.html">Home</a>
+			<a href="https://jacquelinee.sgedu.site/final_project/contactus.html">Contact Us</a>
+			<a href="https://jacquelinee.sgedu.site/final_project/signup.html">Signup</a>
+			<a href="https://jacquelinee.sgedu.site/final_project/login.php"">Login</a>
 		</div>
     </body>
 </html>
