--- a/diaryform.html
+++ b/diaryform.html
@@ -118,6 +118,9 @@
 				</div>
 			</form>
 		</div>
+		<button id="red" class="btn-color-change">Theme 1</button>
+		<button id="green" class="btn-color-change">Theme 2</button>
+		<button id="blue" class="btn-color-change">Theme 3</button>
 		<div class="footer">
 			<a href="https://jacquelinee.sgedu.site/final_project/index.html">Home</a>
 			<a href="https://jacquelinee.sgedu.site/final_project/contactus.html">Contact Us</a>
